Fri Jun  6 19:55:16 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/PersistentInfoRepo:
        * tests/DCPS/PersistentInfoRepo/Listener.h:
        * tests/DCPS/PersistentInfoRepo/Listener.cpp:
        * tests/DCPS/PersistentInfoRepo/PersistentInfoRepo.mpc:
        * tests/DCPS/PersistentInfoRepo/Publisher.cpp:
        * tests/DCPS/PersistentInfoRepo/README:
        * tests/DCPS/PersistentInfoRepo/Subscriber.cpp:
        * tests/DCPS/PersistentInfoRepo/multicast.ini:
        * tests/DCPS/PersistentInfoRepo/pub_multicast_async.ini:
        * tests/DCPS/PersistentInfoRepo/rtps.ini:
        * tests/DCPS/PersistentInfoRepo/run_test.pl:
        * tests/DCPS/PersistentInfoRepo/shmem.ini:
        * tests/DCPS/PersistentInfoRepo/tcp.ini:
        * tests/DCPS/PersistentInfoRepo/udp.ini:

          Added preliminary test that will verify that a persistent
          InfoRepo can associate data readers and data writers
          that were created before and after the InfoRepo went down.

Fri Jun  6 19:51:13 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/Utils:
        * tests/Utils/DDSApp.h:
        * tests/Utils/DDSApp.cpp:
        * tests/Utils/DDSFacade.h:
        * tests/Utils/DataReaderListenerImpl.h:
        * tests/Utils/ListenerRecorder.h:
        * tests/Utils/TestUtils.mpc:
        * tests/Utils/TestUtils_Export.h:

          Added library to make writing tests easier.

Fri Jun  6 14:23:13 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/idl/HTemplate.txt:

          Added typedefs to tie together generated types.

Thu Jun  5 17:57:50 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/FederatorManagerImpl.cpp:

          Fixing error passing in POD type for ACE_DEBUG.

Thu Jun  5 15:51:18 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/FederatorConfig.cpp:
        * dds/InfoRepo/FederatorManagerImpl.cpp:
        * dds/InfoRepo/FederatorManagerImpl_updates.cpp:
